[gd_scene load_steps=6 format=3 uid="uid://c40dpxftumv53"]

[ext_resource type="Texture2D" uid="uid://cod8fdr64ij81" path="res://ui/phone/bottom_btns_panel/cog_icon.png" id="1_ayqgd"]
[ext_resource type="Script" path="res://ui/phone/bottom_btns_panel/bottom_btns_panel.gd" id="1_ud6yl"]
[ext_resource type="Texture2D" uid="uid://bdpd3qeeslwwq" path="res://ui/phone/bottom_btns_panel/spell_icon.png" id="2_4fgp4"]
[ext_resource type="PackedScene" uid="uid://vv441by8asxy" path="res://ui/widgets/button_with_icon.tscn" id="2_bmhk2"]
[ext_resource type="Texture2D" uid="uid://bcynj12kbr3ea" path="res://ui/phone/bottom_btns_panel/equip_icon.png" id="3_1a0pq"]

[node name="BottomBtnPanel" type="MarginContainer"]
offset_right = 52.0
offset_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
script = ExtResource("1_ud6yl")
icons = Array[Texture]([ExtResource("1_ayqgd"), ExtResource("2_4fgp4"), ExtResource("3_1a0pq")])

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ButtonWithIcon" parent="HBoxContainer2" instance=ExtResource("2_bmhk2")]
layout_mode = 2

[node name="ButtonWithIcon2" parent="HBoxContainer2" instance=ExtResource("2_bmhk2")]
layout_mode = 2

[node name="ButtonWithIcon3" parent="HBoxContainer2" instance=ExtResource("2_bmhk2")]
layout_mode = 2
